# sztuczna-inteligencja

./: .gitignore  README.md  pyproject.toml  requirements.txt
lab1/: lab_1.ipynb  lab_1.py
lab2/: lab_2.ipynb
lab3/: lab_3.ipynb
lab4/: lab_4.ipynb
